--- a/Google Rewrite.conf
+++ b/Google Rewrite.conf
@@ -7,4 +7,4 @@ hostname = www.google.cn, www.g.cn,*.baidu.com
 ^https?://(www\.)?g\.cn url 302 https://www.google.com
 ^https?://(www\.)?google\.cn url 302 https://www.google.com
 ^https?://(www\.)?google\.cn/search url 302 https://www.google.com/search
-^https?://(www\.)?baidu\.com 302 https://www.google.com
+^https?://(*\.)?baidu\.com 302 https://www.google.com
