--- a/Google Rewrite.conf
+++ b/Google Rewrite.conf
@@ -2,9 +2,9 @@
 #!desc=Safari 谷歌搜索重定向
 #!system=ios
 
-hostname = www.google.cn, www.g.cn,*.baidu.com
+hostname = www.google.cn, www.g.cn,baidu.com
 
 ^https?://(www\.)?g\.cn url 302 https://www.google.com
 ^https?://(www\.)?google\.cn url 302 https://www.google.com
 ^https?://(www\.)?google\.cn/search url 302 https://www.google.com/search
-^https?://(*\.)?baidu\.com 302 https://www.google.com
+^https?://?baidu\.com 302 https://www.google.com
